# hight2vdm

./: .gitignore  LICENSE  README.md  batch_convert.sh  pyproject.toml  requirements.txt
src/height2vdm/: cli.py
src/hight2vdm/: cli.py  util.py  ~cli.py
tools/: concat_exr.py
